Fix the permanent scrollbar when a text component is in edit mode

--- a/modules/app/src/main/resources/assets/page-editor/styles/reset.less
+++ b/modules/app/src/main/resources/assets/page-editor/styles/reset.less
@@ -14,6 +14,7 @@ html {
   body {
     // For IE, in order for an element to have height:100%; all parent elements must have height:100%;
     height: 100%;
+    width: 100%;
     // for crosshair highlighter to be drawn properly when content is shorter than window
     min-height: 100%;
     margin: 0;
